force-app/main/default/objects/OA_Qualification_Rule__mdt/OA_Qualification_Rule__mdt.object-meta.xml
<CustomObject>
    <label>OA Qualification Rule</label>
    <pluralLabel>OA Qualification Rules</pluralLabel>
</CustomObject>