force-app/main/default/objects/OA_Qualification_Rule__mdt/fields/Criterion_Type__c.field-meta.xml
<CustomField>
    <fullName>Criterion_Type__c</fullName>
    <label>Criterion Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>