force-app/main/default/objects/OA_Qualification_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>