force-app/main/default/objects/OA_Qualification_Rule__mdt/fields/Ruleset__c.field-meta.xml
<CustomField>
    <fullName>Ruleset__c</fullName>
    <label>Ruleset</label>
    <length>80</length>
    <type>Text</type>
</CustomField>