force-app/main/default/objects/OA_Qualification_Rule__mdt/fields/Ruleset_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Ruleset_Threshold__c</fullName>
    <label>Ruleset Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>